Fixing visual bugs on mobile screens

--- a/src/Components/Header-Footer/Header-Footer.css
+++ b/src/Components/Header-Footer/Header-Footer.css
@@ -1,27 +1,27 @@
 .header-logo {
   display: inline-block;
-  padding: 10px 20px 0 20px;
+  padding: 10px 16px 0;
 }
 
 .header-logo a {
   display: inline-block;
-  width: 58px;
-  height: 58px;
+  width: 38px;
+  height: 38px;
 }
 
 .header-logo h1 {
   display: inline-block;
   margin: 0;
-  padding: 6px 16px;
-  font-size: 48px;
+  padding: 6px 0 6px 12px;
+  font-size: 24px;
   line-height: 1;
   text-transform: uppercase;
   vertical-align: top;
 }
 
 .MuiToolbar-root .MuiButton-root {
-  padding: 12px 10px;
-  border-radius: 0px;
+  padding: 10px 16px 10px 0;
+  font-size: 14px;
 }
 
 .MuiToolbar-root .MuiButton-root:hover {
@@ -44,20 +44,21 @@ footer .footer_copyright {
   margin: 10px 0px;
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (min-width: 600px) {
   .header-logo {
-    padding: 10px 16px 0 16px;
+    padding: 10px 20px 0;
   }
   .header-logo a {
-    width: 46px;
-    height: 46px;
+    width: 58px;
+    height: 58px;
   }
   .header-logo h1 {
-    font-size: 28px;
-    padding: 6px 0 6px 12px;
+    padding: 6px 16px;
+    font-size: 48px;
   }
   .MuiToolbar-root .MuiButton-root {
-    padding: 10px 16px 10px 0;
-    font-size: 14px;
+    padding: 12px 10px;
+    border-radius: 0px;
+    font-size: 0.875rem;
   }
 }
